--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node --max-old-space-size=8192 dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -44,7 +44,7 @@
     "dotenv": "^16.4.7",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.10.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react-loader-spinner": "^6.1.6",
